flux/apps/int/homosyntaxisme/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homosyntaxisme-svc
spec:
  type: ClusterIP
  selector:
    app: homosyntaxisme
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
