flux/apps/int/homosyntaxisme/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homosyntaxisme-route
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik-int
  hostnames:
    - "homosyntaxisme.vpn.lab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homosyntaxisme-svc
          port: 8080
